Completed App minus styling

--- a/moviedat/app/views/movies/show.html.erb
+++ b/moviedat/app/views/movies/show.html.erb
@@ -52,5 +52,11 @@
   <%= @movie.year %>
 </p>
 
+<h2>Comments</h2>
+<%= render @movie.comments %>
+
+<h2>Add a comment:</h2>
+<%= render "comments/form" %>
+
 <%= link_to 'Edit', edit_movie_path(@movie) %> |
 <%= link_to 'Back', movies_path %>
